# Discord

./: CMakeLists.txt
include/Discord/: Behaviour.hpp  Bot.hpp  Error.hpp  EventListener.hpp  Gateway.hpp  Heartbeat.hpp  Intent.hpp  Snowflake.hpp
include/Discord/Entity/: Channel.hpp  Guild.hpp  PermissionOverwrite.hpp
include/Discord/Event/: Base.hpp  EventBase.hpp  GuildCreate.hpp  Ready.hpp
include/Discord/Gateway/: Gateway.hpp  Heartbeat.hpp
include/Discord/Voice/: Connection.hpp  Heartbeat.hpp
src/: Bot.cpp  EventListener.cpp  Gateway.cpp  Heartbeater.cpp  Snowflake.cpp
src/Discord/: Bot.cpp  Bot.hpp  EventListener.hpp
src/Discord/Entities/: Channel.cpp  Guild.hpp  PermissionOverwrite.cpp
src/Discord/Events/: Ready.cpp  Ready.hpp
src/Discord/Gateway/: Gateway.cpp  Gateway.hpp  Heartbeat.cpp  Heartbeat.hpp
src/Discord/Voice/: Connection.cpp  Heartbeat.cpp  Heartbeat.hpp
src/Entities/: Channel.cpp  Guild.cpp  PermissionOverwrite.cpp
src/Events/: GuildCreate.cpp  Ready.cpp
src/Gateway/: Gateway.cpp  Heartbeat.cpp
src/Strawberry/Discord/: Behaviour.hpp  Bot.cpp  Bot.hpp  Error.hpp  EventListener.cpp  Snowflake.cpp  Snowflake.hpp
src/Strawberry/Discord/Entities/: Channel.cpp  Channel.hpp  Guild.cpp  Guild.hpp  GuildMember.cpp  GuildMember.hpp  PermissionOverwrite.cpp  PermissionOverwrite.hpp  User.cpp  User.hpp  VoiceState.cpp  VoiceState.hpp
src/Strawberry/Discord/Events/: EventBase.hpp  GuildCreate.cpp  GuildCreate.hpp  MessageCreate.cpp  MessageCreate.hpp  Ready.cpp  Ready.hpp
src/Strawberry/Discord/Gateway/: Gateway.cpp  Gateway.hpp  GatewayConnectionHeartbeat.cpp  GatewayConnectionHeartbeat.hpp  Heartbeat.cpp  Heartbeat.hpp
src/Strawberry/Discord/Voice/: Connection.cpp  Connection.hpp  Heartbeat.cpp  Heartbeat.hpp  VoiceConnectionHeartbeat.cpp  VoiceConnectionHeartbeat.hpp
src/Voice/: Connection.cpp  Heartbeat.cpp
test/: Main.cpp
